--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -2733,6 +2733,32 @@
 .blue {
   color: #0965c2;
 }
+
+// PPS Footer
+.footer_bar1 table {
+  background-color: #091e35;
+  color: white;
+  font-family: calibri;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.footer_img {
+  text-align: left;
+}
+
+.footer_data1 {
+  font-weight: 100;
+  text-align: left;
+  font-size: 23px;
+}
+
+.footer_data2 {
+  font-weight: 100;
+  font-size: 35px;
+  text-align: right;
+  padding-right: 25px
+}
  
 
 
