--- a/API/Resources/css/site.css
+++ b/API/Resources/css/site.css
@@ -3042,3 +3042,39 @@ a {
 .blue {
     color: #0965c2;
 }
+
+/*PPS Footer*/
+.footer_bar1 table {
+    background-color: #091e35;
+    color: white;
+    font-family: calibri;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.footer_img {
+    text-align: left;
+}
+
+.footer_data1 {
+    font-weight: 100;
+    text-align: left;
+    font-size: 23px;
+}
+
+.footer_data2 {
+    font-weight: 100;
+    font-size: 35px;
+    text-align: right;
+    padding-right: 25px
+}
+
+.pps_area_title {
+    background-color: #091e35; /* Set black background color for the heading */
+    color: white;
+    padding: 10px;
+    
+    text-align: center;
+    font-family: Calibri;
+    font-size: 30px;
+}
