--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -26,7 +26,7 @@
     <ul class="side-bar-ul">
       <li class="side-bar-li" title={{widget.DisplayName}} *ngFor="let widget of widgetsArray">
         <a (click)="selectWidget(widget.Identifier, widget.WidgetName)">
-          <span class="nav-icon fa" [ngClass]="{
+          <!--<span class="nav-icon fa" [ngClass]="{
                   'fa-address-book': widget.WidgetName == 'FSPDetails',
                   'fa-address-book-o': widget.WidgetName == 'CustomerInformation' || widget.WidgetName == 'CustomerDetails' || widget.WidgetName == 'PortfolioCustomerDetails',
                   'fa-address-card-o' : widget.WidgetName == 'AccountInformation' || widget.WidgetName == 'CustomerAddressDetails',
@@ -69,7 +69,72 @@
                   'fa-repeat' : widget.WidgetName == 'HomeLoanInstalment' || widget.WidgetName == 'WealthHomeLoanInstalment',
                   'fa-bar-chart' : widget.WidgetName == 'MCAVATAnalysis' || widget.WidgetName == 'WealthMCAVATAnalysis'
               }">
-          </span><span class="nav-title text-truncate" title="{{ widget.DisplayName }}" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 100px"> {{widget.DisplayName}} </span>
+          </span><span class="nav-title text-truncate" title="{{ widget.DisplayName }}" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 100px"> {{widget.DisplayName}} </span>-->
+          <span class="nav-icon fa"
+                [class.fa-address-book]="widget.WidgetName == 'FSPDetails'"
+                [class.fa-address-book-o]="['CustomerInformation', 'CustomerDetails', 'PortfolioCustomerDetails'].includes(widget.WidgetName)"
+                [class.fa-address-card-o]="['AccountInformation', 'CustomerAddressDetails'].includes(widget.WidgetName)"            
+                [class.icon-videoWidget]="widget.WidgetName == 'Video'"
+                [class.icon-home-line2]="widget.WidgetName == 'Image'"               
+                [class.icon-widget-single-column2.fa-lg]="['PPSFooter1','FSPDetails', 'PaymentSummary', 'PPSHeading','PPSDetails','Summary','BreakdownOfInvestmentAccounts',
+                'WealthBreakdownOfInvestmentAccounts','PersonalLoanDetail','PersonalLoanTotalAmountDetail',
+                'HomeLoanTotalAmountDetail','AccountSummary','WealthHomeLoanTotalAmountDetail'].includes(widget.WidgetName)"
+                [class.icon-AnalyticsWidget]="widget.WidgetName == 'Analytics'"
+                [class.icon-widget-multi-column2]="widget.WidgetName == 'SavingTransaction'"
+                [class.icon-widget-line-chart2]="widget.WidgetName == 'SavingTrend'"
+                [class.icon-rp-quality1]="widget.WidgetName == 'Top4IncomeSources'"
+                [class.icon-AvailableBalanceWidget]="widget.WidgetName == 'SavingAvailableBalance'"
+                [class.fa-bell-o]="widget.WidgetName == 'ReminderaAndRecommendation'"
+                [class.fa-code.fa-code]="widget.WidgetName == 'StaticHtml'"
+
+                >
+          </span>
+        
+          <!--<span class="nav-icon fa" [ngClass]="{
+      'fa-address-book': widget.WidgetName == 'FSPDetails',
+      'fa fa-address-book-o': widget.WidgetName == 'CustomerInformation' || widget.WidgetName == 'CustomerDetails' || widget.WidgetName == 'PortfolioCustomerDetails',
+      'fa-address-card-o' : widget.WidgetName == 'AccountInformation' || widget.WidgetName == 'CustomerAddressDetails',
+      'fa-cc fa-lg': widget.WidgetName == 'ClientContactDetails',
+      'fa-trophy fa-lg': widget.WidgetName == 'GreenbacksTotalRewardPoints',
+      'icon-imageWidget' : widget.WidgetName == 'Image',
+      'icon-videoWidget' : widget.WidgetName == 'Video',
+      'icon-widget-single-column2 fa-lg' :widget.WidgetName == 'FSPDetails'|| widget.WidgetName == 'PaymentSummary'|| widget.WidgetName == 'PPSHeading' ||
+            widget.WidgetName == 'PPSDetails' || widget.WidgetName == 'Summary' || widget.WidgetName == 'BreakdownOfInvestmentAccounts'
+            || widget.WidgetName == 'WealthBreakdownOfInvestmentAccounts' || widget.WidgetName == 'PersonalLoanDetail' ||
+            widget.WidgetName == 'PersonalLoanTotalAmountDetail' || widget.WidgetName == 'HomeLoanTotalAmountDetail' ||
+            widget.WidgetName == 'AccountSummary' || widget.WidgetName == 'WealthHomeLoanTotalAmountDetail' || widget.WidgetName == 'MCAAccountSummary'|| widget.WidgetName == 'WealthMCAAccountSummary' ||  widget.WidgetName == 'CorporateSaverTableTotal' ,
+      'fa-bell-o' : widget.WidgetName == 'ReminderaAndRecommendation' || widget.WidgetName == 'SpecialMessage' || widget.WidgetName == 'PortfolioReminders',
+      'icon-rp-loss1 fa-lg' : widget.WidgetName == 'InvestmentPortfolioRisk',
+      'icon-AnalyticsWidget' : widget.WidgetName == 'Analytics',
+      'icon-AvailableBalanceWidget' : widget.WidgetName == 'SavingAvailableBalance' || widget.WidgetName == 'CurrentAvailableBalance' || widget.WidgetName == 'PersonalLoanPaymentDue',
+      'icon-widget-multi-column2' : widget.WidgetName == 'SavingTransaction' || widget.WidgetName == 'InvestmentPortfolioStatement' || widget.WidgetName == 'InvestmentWealthPortfolioStatement' || widget.WidgetName == 'PersonalLoanTransaction' || widget.WidgetName == 'PersonalLoanAccountsBreakdown' || widget.WidgetName == 'HomeLoanAccountsBreakdown' || widget.WidgetName == 'WealthHomeLoanAccountsBreakdown' || widget.WidgetName == 'MCATransaction' || widget.WidgetName == 'WealthMCATransaction'||widget.WidgetName == 'CorporateSaverTransaction',
+      'icon-widget-line-chart2' : widget.WidgetName == 'SavingTrend' || widget.WidgetName == 'InvestorPerformance' || widget.WidgetName == 'WealthInvestorPerformance',
+      'icon-TransactionMixWidget' : widget.WidgetName == 'TransactionMix',
+      'icon-rp-production1' : widget.WidgetName == 'SpendingTrend',
+      'fa-newspaper-o' : widget.WidgetName == 'NewsAlerts' || widget.WidgetName == 'NedbankService' || widget.WidgetName == 'WealthNedbankService' || widget.WidgetName == 'PortfolioNewsAlerts',
+      'fa-credit-card' : widget.WidgetName == 'CurrentTransaction',
+      'icon-rp-quality1' : widget.WidgetName == 'Top4IncomeSources',
+      'fa-university' : widget.WidgetName == 'BranchDetails' || widget.WidgetName == 'WealthHomeLoanBranchDetails' || widget.WidgetName == 'WealthMCABranchDetails',
+      'fa-list' : widget.WidgetName == 'ExplanatoryNotes' || widget.WidgetName == 'WealthExplanatoryNotes',
+      'fa-exclamation-circle' : widget.WidgetName == 'PL_InsuranceMessage'  || widget.WidgetName == 'HomeLoanPaymentDueSpecialMsg'||widget.WidgetName == 'CorporateSaverAgentMessage',
+      'fa-table fa-lg': widget.WidgetType == 'Table' || widget.WidgetName == 'HomeLoanInstalmentDetail',
+      'fa-list-alt fa-lg': widget.WidgetType == 'Form' || widget.WidgetName == 'GreenbacksContactUs',
+      'fa-code fa-lg': widget.WidgetType == 'Html',
+      'fa-bar-chart fa-lg': widget.WidgetType == 'BarGraph' || widget.WidgetName == 'AccountAnalysis' || widget.WidgetName == 'YTDRewardsPoints' || widget.WidgetName == 'PointsRedeemedYTD' || widget.WidgetName == 'ProductRelatedPointsEarned',
+      'fa-line-chart fa-lg': widget.WidgetType == 'LineGraph',
+      'fa-pie-chart fa-lg': widget.WidgetType == 'PieChart' || widget.WidgetName == 'CategorySpendRewards',
+      'fa-code fa-code': widget.WidgetName == 'StaticHtml',
+      'fa fa-scissors': widget.WidgetName == 'PageBreak',
+      'fa-ravelry fa-ravelry':  widget.WidgetName == 'CSAgentLogo',
+      'fa-address-card fa-address-card':  widget.WidgetName == 'CorporateSaverAgentAddress',
+      'fa-vcard-o fa-vcard-o':  widget.WidgetName == 'CorporateSaverClientandAgentDetails',
+      'fa-id-card-o': widget.WidgetName == 'SegmentBasedContent',
+      'fa-tags': widget.WidgetName == 'HomeLoanSummaryTaxPurpose' || widget.WidgetName == 'WealthHomeLoanSummaryTaxPurpose' || widget.WidgetName == 'CorporateAgentDetails',
+      'fa-repeat' : widget.WidgetName == 'HomeLoanInstalment' || widget.WidgetName == 'WealthHomeLoanInstalment',
+      'fa-bar-chart' : widget.WidgetName == 'MCAVATAnalysis' || widget.WidgetName == 'WealthMCAVATAnalysis'
+  }">
+      </span>-->
+          <span class="nav-title text-truncate" title="{{ widget.DisplayName }}" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 100px"> {{widget.DisplayName}} </span>
 
         </a>
       </li>
