Resolved merge conflict errors

--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -77,7 +77,7 @@
                 [class.fa-address-card-o]="['AccountInformation', 'CustomerAddressDetails'].includes(widget.WidgetName)"            
                 [class.icon-videoWidget]="widget.WidgetName == 'Video'"
                 [class.icon-home-line2]="widget.WidgetName == 'Image'"               
-                [class.icon-widget-single-column2.fa-lg]="['PPSFooter1','FSPDetails', 'PaymentSummary', 'PPSHeading','PPSDetails','Summary','BreakdownOfInvestmentAccounts',
+                [class.icon-widget-single-column2.fa-lg]="['PPSFooter1','PaymentSummary', 'FSPHeading','FSPDetails','Summary','BreakdownOfInvestmentAccounts',
                 'WealthBreakdownOfInvestmentAccounts','PersonalLoanDetail','PersonalLoanTotalAmountDetail',
                 'HomeLoanTotalAmountDetail','AccountSummary','WealthHomeLoanTotalAmountDetail'].includes(widget.WidgetName)"
                 [class.icon-AnalyticsWidget]="widget.WidgetName == 'Analytics'"
