--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -79,14 +79,18 @@
                 [class.icon-home-line2]="widget.WidgetName == 'Image'"               
                 [class.icon-widget-single-column2.fa-lg]="['PPSFooter1','PaymentSummary', 'FSPHeading','FSPDetails','Summary','BreakdownOfInvestmentAccounts',
                 'WealthBreakdownOfInvestmentAccounts','PersonalLoanDetail','PersonalLoanTotalAmountDetail',
-                'HomeLoanTotalAmountDetail','AccountSummary','WealthHomeLoanTotalAmountDetail'].includes(widget.WidgetName)"
+                'HomeLoanTotalAmountDetail','AccountSummary','WealthHomeLoanTotalAmountDetail','ProductSummary'].includes(widget.WidgetName)"
                 [class.icon-AnalyticsWidget]="widget.WidgetName == 'Analytics'"
                 [class.icon-widget-multi-column2]="widget.WidgetName == 'SavingTransaction'"
                 [class.icon-widget-line-chart2]="widget.WidgetName == 'SavingTrend'"
                 [class.icon-rp-quality1]="widget.WidgetName == 'Top4IncomeSources'"
-                [class.icon-AvailableBalanceWidget]="widget.WidgetName == 'SavingAvailableBalance'"
+                [class.icon-rp-production1]="widget.WidgetName == 'SpendingTrend'"
+                [class.icon-AvailableBalanceWidget]="['SavingAvailableBalance', 'CurrentAvailableBalance'].includes(widget.WidgetName)" 
+            
                 [class.fa-bell-o]="widget.WidgetName == 'ReminderaAndRecommendation'"
                 [class.fa-code.fa-code]="widget.WidgetName == 'StaticHtml'"
+                [class.fa-credit-card]="widget.WidgetName == 'CurrentTransaction'"
+
 
                 >
           </span>
