--- a/API/Resources/css/site.css
+++ b/API/Resources/css/site.css
@@ -1384,8 +1384,9 @@ a {
     -moz-box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.2);
     transition: 0.2s;
     z-index: 999;
-    padding: 0px 10px 10px 10px;
+    padding: 0px; /*0px 10px 10px 10px;*/
     overflow: auto;
+    max-height: 93%;
 }
 
 .dashboard-container {
