--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -2854,6 +2854,7 @@
   font-weight: 400;
   margin: 0 auto;
   background-color: #fff;
+  width:100%;
 }
 /*------------CSS end for FSP Statement Mokeup Design 03-01-2024------------------*/
  
