--- a/API/Resources/css/site.css
+++ b/API/Resources/css/site.css
@@ -3165,4 +3165,11 @@ a {
     .colom-4 img {
         max-width: 100%;
     }
+.container_area {
+    font-family: 'Calibri','Helvetica Neue', Arial,sans-serif;
+    font-weight: 400;
+    margin: 0 auto;
+    background-color: #fff;
+    width: 100%;
+}
 /*pps product summary end*/
