--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -2977,3 +2977,16 @@
 }
 
 
+// footer image
+
+.fsp-bottom-image-car {
+  border-top: 5px solid #091E35;
+}
+
+.colom-4 img {
+  max-width: 100%;
+}
+.image {
+  width: 100%;
+  height: 100%;
+}
