--- a/API/Resources/css/site.css
+++ b/API/Resources/css/site.css
@@ -3121,6 +3121,7 @@ a {
 
 .fsp-bdr-right {
     border-right: 1px solid #A39F94;
+    border-left: 1px solid #A39F94;
 }
 
 .fsp-bdr-bottom {
@@ -3215,15 +3216,14 @@ a {
 
 /*FSP Details*/ 
 .col-49 {
-    width: 49%;
+    width: 70%;
 }
 
 .text-gray {
     color: #5b5a5a !important;
 }
-
-.col-49 {
-    width: 49%;
+.col-48 {
+    width: 30%;
 }
 
 .header-contact {
@@ -3270,10 +3270,9 @@ a {
 
 .fsp-payment-sum {
     font-size: 1.25rem;
-    font-weight: 700;
     padding: 5px 10px;
     text-align: center;
-    width: 100%;
+    width: 80%;
 }
 
 /*FSP Footer*/
