--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -34,8 +34,9 @@
                   'fa-trophy fa-lg': widget.WidgetName == 'GreenbacksTotalRewardPoints',
                   'icon-imageWidget' : widget.WidgetName == 'Image',
                   'fa fa-address-book-o': widget.WidgetName == 'PPSDetails1' || widget.WidgetName == 'PPSDetails1' || widget.WidgetName == 'PortfolioCustomerDetails',
-                   'fa fa-address-book-o': widget.WidgetName == 'PPSDetails2' || widget.WidgetName == 'PPSDetails2' || widget.WidgetName == 'PortfolioCustomerDetails',
-                  'icon-videoWidget' : widget.WidgetName == 'Video',
+                   
+                  'fa-address-book': widget.WidgetName == 'PPSDetails2',
+                   'icon-videoWidget' : widget.WidgetName == 'Video',
                   'icon-widget-single-column2 fa-lg' : widget.WidgetName == 'PPSFooter1'|| widget.WidgetName == 'FSPDetails'|| widget.WidgetName == 'PaymentSummary'|| widget.WidgetName == 'FSPHeading' || widget.WidgetName == 'FSPDetails' || widget.WidgetName == 'Summary' || widget.WidgetName == 'BreakdownOfInvestmentAccounts' || widget.WidgetName == 'WealthBreakdownOfInvestmentAccounts' || widget.WidgetName == 'PersonalLoanDetail' || widget.WidgetName == 'PersonalLoanTotalAmountDetail' || widget.WidgetName == 'HomeLoanTotalAmountDetail' || widget.WidgetName == 'AccountSummary' || widget.WidgetName == 'WealthHomeLoanTotalAmountDetail' || widget.WidgetName == 'MCAAccountSummary'|| widget.WidgetName == 'WealthMCAAccountSummary' ||  widget.WidgetName == 'CorporateSaverTableTotal' ,
                   'icon-widget-single-column2 fa-lg' : widget.WidgetName == 'PPSFooter1'|| widget.WidgetName == 'FSPDetails'|| widget.WidgetName == 'PaymentSummary'||  widget.WidgetName == 'ProductSummary' || widget.WidgetName == 'PPSHeading' || widget.WidgetName == 'PPSDetails' || widget.WidgetName == 'Summary' || widget.WidgetName == 'BreakdownOfInvestmentAccounts' || widget.WidgetName == 'WealthBreakdownOfInvestmentAccounts' || widget.WidgetName == 'PersonalLoanDetail' || widget.WidgetName == 'PersonalLoanTotalAmountDetail' || widget.WidgetName == 'HomeLoanTotalAmountDetail' || widget.WidgetName == 'AccountSummary' || widget.WidgetName == 'WealthHomeLoanTotalAmountDetail' || widget.WidgetName == 'MCAAccountSummary'|| widget.WidgetName == 'WealthMCAAccountSummary' ||  widget.WidgetName == 'CorporateSaverTableTotal' ,
                   'fa-bell-o' : widget.WidgetName == 'ReminderaAndRecommendation' || widget.WidgetName == 'SpecialMessage' || widget.WidgetName == 'PortfolioReminders',
@@ -79,8 +80,8 @@
                 [class.fa-address-card-o]="['AccountInformation', 'CustomerAddressDetails','FooterImage'].includes(widget.WidgetName)"            
                 [class.icon-videoWidget]="widget.WidgetName == 'Video'"
                 [class.fa-address-book-o]="['PPSDetails1', 'PPSDetails1', 'PortfolioCustomerDetails'].includes(widget.WidgetName)" 
-                [class.fa-address-book-o]="['PPSDetails2', 'PPSDetails2', 'PortfolioCustomerDetails'].includes(widget.WidgetName)" 
-                [class.icon-home-line2]="widget.WidgetName == 'Image'"   
+                [class.fa-address-book]="widget.WidgetName == 'PPSDetails2'"
+               [class.icon-home-line2]="widget.WidgetName == 'Image'"   
                 [class.icon-TransactionMixWidget]="widget.WidgetName == 'ProductSummary'"   
                             
                 [class.icon-widget-single-column2.fa-lg]="['PPSFooter1' , 'FSPHeading','DetailedTransactions','FSPDetails','Summary','BreakdownOfInvestmentAccounts',
