--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -2510,251 +2510,6 @@
 }
 
 
-/*// FSP widget document css
-
-.header-logo {
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.social-icons {
-  margin-left: 30px;
-  display: flex;
-  gap: 20px;
-}
-
-.social-icons a img {
-  width: 70px;*/ /* Adjust the size of your social icons */
-  /*height: 70px;
-}
-
-.pps-logo img {
-  width: 130px;*/ /* Adjust the size of your logo */
-  /*height: 130px;
-}
-
-.horizontal-line {
-  height: 10px;
-  background-color: #222a35;
-  margin-top: 0%;
-}
-
-.horizontal-line1 {
-  height: 10px;
-  width: 300px;
-  background-color: #222a35;
-  margin-top: 0%;
-}
-
-.heading-container {
-  background-color: #222a35;*/ /* Set black background color for the heading */
-  /*color: white;
-  padding: 5px;
-  text-align: center;
-  font-family: Calibri;
-  font-size: 40px;
-}
-
-.info-section {
-    width:100%;
-  display: flex;
-  justify-content: space-around;
-  padding: 20px;
-}
-
-.subsection {
-  text-align: left;
-  font-family: Calibri;
-  font-size: 25px;
-}
-
-.table-subsection {
-  font-family: Calibri;
-  font-size: 25px;
-  font-weight: bold;
-  text-align: center;
-}
-
-.table-subsection1 {
-  font-family: Calibri;
-  font-size: 35px;
-  text-align: left;
-  width: 100%;
-}
-
-.table-subsection2 td {
-  border: 2px solid black;
-  border-collapse: collapse;
-  font-family: Calibri;
-  font-size: 25px;
-  text-align: center;
-}
-
-.continue {
-  font-family: Calibri;
-  font-size: 35px;
-  margin-right: 150px;
-  float: right;
-}
-
-.page {
-  font-family: Calibri;
-  font-size: 25px;
-  margin-left: 150px;
-  float: left;
-}
-
-.page2 {
-  font-family: Calibri;
-  font-size: 22px;
-  float: right;
-  margin-right: 150px;
-}
-
-.tds {
-  width: 500px;
-}
-
-.tds1 {
-  text-align: left;
-}
-
-.vl {
-  border-left: 6px solid #222a35;
-  height: 200px;
-}
-
-.leftarrowlogo {
-  margin-bottom: 15px;
-}
-
-
-
-.footer {
-  border-top: 2px solid blue;
-  display: flex;
-  justify-content: space-between;
-  padding: 20px 0;
-}
-
-.footer-section {
-  text-align: center;
-}
-
-.footer-section img {
-  width: 100px;
-}
-
-
-
-
-#customers tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-#customers tr:hover {
-  background-color: #ddd;
-}
-
-
-// PPS Heading
-
-.header-logo {
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.pps-logo {
-  margin-left: 10px;
-  display: flex;
-  gap: 40px;
-}
-
-.pps-logo img {
-  height: 140px;
-  width: 140px;
-}
-
-.pps-heading {
-  width: 100%;
-}
-
-.pps-heading1 {
-  color: #222a35;
-  font-family: Calibri;
-  font-size: 50px;
-  margin-top: 40px;
-}
-
-.pps-heading2 {
-  color: #222a35;
-  font-family: Calibri;
-  font-weight: bold;
-  font-size: 25px;
-  margin-bottom: 20px;
-}
-
-// PPS Details
-.details-section {
-  padding-left: 35px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.details-subsection1 {
-  text-align: left;
-  font-family: Calibri;
-  font-size: 25px;
-}
-.details-subsection2 {
-  margin-right: 10%;
-  text-align: left;
-  font-family: Calibri;
-  font-size: 25px;
-}
-.blue {
-  color: #0965c2;
-}
-
-// PPS Footer
-.footer_bar1 table {
-  background-color: #091e35;
-  color: white;
-  font-family: calibri;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-.footer_img {
-  text-align: left;
-}
-
-.footer_data1 {
-  font-weight: 100;
-  text-align: left;
-  font-size: 23px;
-}
-
-.footer_data2 {
-  font-weight: 100;
-  font-size: 35px;
-  text-align: right;
-  padding-right: 25px
-}
-
-.pps_area_title {
-  background-color: #091e35;*/ /* Set black background color for the heading */
-  /*color: white;
-  padding: 10px;
-  
-  text-align: center;
-  font-family: Calibri;
-  font-size: 30px;
-}*/
 
 /*css new */
 .container_area {
@@ -2992,4 +2747,22 @@
 .image {
   width: 100%;
   height: 100%;
+}
+
+// pps details2
+
+.dark-blue-bg {
+  background-color: #091E35 !important;
+}
+
+.pps-production-stat p {
+  font-size: 0.8rem;
+  margin-bottom: 0;
+}
+
+.pps-production-stat h4 {
+  font-size: 0.9rem;
+}
+.bdr-end-5 {
+  border-right: 5px solid #091E35;
 }
