Earning for period widget at client side completed.

--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -82,9 +82,8 @@
                 [class.fa-address-book-o]="['PPSDetails1', 'PPSDetails1', 'PortfolioCustomerDetails'].includes(widget.WidgetName)" 
                 [class.fa-address-book]="widget.WidgetName == 'PPSDetails2'"
                [class.icon-home-line2]="widget.WidgetName == 'Image'"   
-                [class.icon-TransactionMixWidget]="widget.WidgetName == 'ProductSummary'"   
-                            
-                [class.icon-widget-single-column2.fa-lg]="['PPSFooter1' , 'FSPHeading','DetailedTransactions','FSPDetails','Summary','BreakdownOfInvestmentAccounts',
+                [class.icon-TransactionMixWidget]="widget.WidgetName == 'ProductSummary'"             
+                [class.icon-widget-single-column2.fa-lg]="['PPSFooter1' , 'FSPHeading','DetailedTransactions','PPSEarningForPeriod','FSPDetails','Summary','BreakdownOfInvestmentAccounts',
                 'WealthBreakdownOfInvestmentAccounts','PersonalLoanDetail','PersonalLoanTotalAmountDetail',
                 'HomeLoanTotalAmountDetail','AccountSummary','WealthHomeLoanTotalAmountDetail'].includes(widget.WidgetName)"
                 [class.icon-AnalyticsWidget]="widget.WidgetName == 'Analytics'"
