--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -2993,3 +2993,121 @@
   width: 100%;
   height: 100%;
 }
+/*PPSDetailedtranction widget*/
+
+.sky-blue-bg{
+  background-color: #69C5D1!important;
+}
+.fs-16{
+  font-size: 0.95rem;
+}
+.pps-monthly-table table tr th{
+  background-color: #8F897E;
+  font-size: 0.75rem;
+  font-weight: normal;
+  padding:8px 5px;
+  line-height: 1;
+  color: #fff;
+  vertical-align: top;
+  height: 40px;
+}
+
+.pps-monthly-table table tr td{
+  font-size: 0.75rem;
+  font-weight: normal;
+  padding:8px 5px;
+  line-height: 1;
+  background-color: #F7F7F7;
+}
+.pps-monthly-table table tr:nth-child(odd) td{
+  background-color: #CECCC8;
+}
+.bdr-right-white{
+  border-right:  1px solid #F1F0EF;
+}
+
+.bdr-bottom-dark{
+  border-bottom: 1px solid #9B968C;
+}
+.col-50{
+  width: 49.6%;
+}
+
+.px-10{
+  padding-left: 0.5rem!important;
+  padding-right: 0.5rem!important;
+}
+
+.pps-total-earning{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.pps-encome-b{
+  border: 1px solid #091E35;
+  background-color: #F2F2F2;
+}
+.pps-details-table table tr td{
+  font-size: 0.7rem;
+}
+
+.pps-header-logo{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.pps-head-social a{
+  margin-right: 1rem;
+  width: 42px;
+}
+.pps-head-social a img{
+  max-width: 100%;
+}
+
+.pps-head-social{
+  display: flex;
+  align-items: center;
+}
+.pps-production-stat p{
+  font-size: 0.8rem;
+  margin-bottom: 0;
+}
+.pps-production-stat h4{
+  font-size: 0.9rem;
+}
+.bdr-end-5{
+  border-right: 5px solid #091E35;
+}
+
+.pps-earning-period table tr th{
+  background-color: #091E35;
+}
+
+.pps-earning-period table tr td {
+background-color: #F7F7F7;
+}
+
+.pps-earning-period table tr:nth-child(odd) td{
+  background-color: #CECCC8;
+}
+.click-here-dark{
+  color: #fff;
+  font-size: 0.85rem;
+  text-decoration: none;
+}
+.fs-16{
+  font-size: 0.85rem!important;
+}
+.pps-bg-gray {
+  background-color: #F2F2F2 !important;
+}
+
+
+.pps-text-dark{
+  color:#091E35!important;
+  font-weight: 400;
+}
+
+
+
+
