--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -81,14 +81,13 @@
                 [class.fa-address-card-o]="['AccountInformation', 'CustomerAddressDetails','FooterImage'].includes(widget.WidgetName)"            
                 [class.icon-videoWidget]="widget.WidgetName == 'Video'"
                 [class.fa-address-book-o]="['PPSDetails1', 'PPSDetails1', 'PortfolioCustomerDetails'].includes(widget.WidgetName)" 
-                [class.fa-address-book]="widget.WidgetName == 'PPSDetails2'"
                 [class.fa-address-book]="widget.WidgetName == 'PPSDetailedTransactions'"
                [class.icon-home-line2]="widget.WidgetName == 'Image'"   
                 [class.icon-TransactionMixWidget]="widget.WidgetName == 'ProductSummary'"             
                 [class.icon-widget-single-column2.fa-lg]="['PPSFooter1' , 'FSPHeading','DetailedTransactions','PPSEarningForPeriod','FSPDetails','Summary','BreakdownOfInvestmentAccounts',
                 'WealthBreakdownOfInvestmentAccounts','PersonalLoanDetail','PersonalLoanTotalAmountDetail',
                 'HomeLoanTotalAmountDetail','AccountSummary','WealthHomeLoanTotalAmountDetail'].includes(widget.WidgetName)"
-                [class.icon-AnalyticsWidget]="widget.WidgetName == 'Analytics'"
+                [class.icon-AnalyticsWidget]="['Analytics', 'PPSDetails2'].includes(widget.WidgetName)"
                 [class.icon-widget-multi-column2]="widget.WidgetName == 'SavingTransaction'"
                 [class.icon-widget-line-chart2]="widget.WidgetName == 'SavingTrend'"
                 [class.icon-rp-quality1]="widget.WidgetName == 'Top4IncomeSources'"
