changes in ppsdetailse2 widget

--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -2845,3 +2845,260 @@
 .bdr-end-5 {
   border-right: 5px solid #091E35;
 }
+
+// body {
+//   margin: 0;
+//   padding: 0;
+//   font-family: 'Calibary', Calibary-bold;
+// }
+
+// header {
+
+ 
+//   padding: 10px;
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+// }
+
+// .social-icons {
+//   display: flex;
+//   gap: 10px;
+// }
+// .vl {
+//   border-left: 6px solid #344253;
+  
+// }
+
+// .social-icons a img {
+//   width: 30px; /* Adjust the size of your social icons */
+//   height: 30px;
+  
+// }
+
+// .logo img {
+//   width: 100px; /* Adjust the size of your logo */
+//   height: auto;
+// }
+
+// .heading-container {
+//   background-color: #344253; /* Set black background color for the heading */
+//   padding: 5px;
+//   text-align: center;
+// }
+
+
+// .info-section {
+//   display: flex;
+//   justify-content: space-around;
+//   padding: 20px;
+
+  
+// }
+
+// .subsection {
+//   text-align:left;
+// }
+
+// p.subsection{
+//   font-family: calibri;
+//   font-size: 9pt;
+// }
+
+
+
+// .blue-border-section {
+//   border-top: 2px solid blue;
+//   border-bottom: 2px solid blue;
+//   display: flex;
+  
+// }
+
+// .table-container {
+//   flex: 1;
+// }
+
+// .white-border {
+//   border-left: 2px solid white;
+//   border-right: 2px solid white;
+// }
+
+// .blue-table {
+//   width: 100%;
+//   border-collapse: collapse;
+  
+// }
+
+// .blue-table th, .blue-table td {
+//   border: 8px solid blue;
+//   padding: 8px;
+//   text-align: center;
+// }
+
+
+
+
+// .button-container {
+//   display: flex;
+//   justify-content: center;
+//   margin-top: 4px; 
+// }
+
+// .center-button {
+//   text-align: center;
+//   background-color: #344253;
+//   color: white;
+//   width: 200px;
+//   margin: 0 10px; 
+// }
+
+
+// .blue-border-section {
+//   border: 2px solid rgb(246, 246, 247);
+//   padding: 0px;
+
+// }
+
+
+
+
+// .blue-heading {
+//   text-align: center;
+//   background-color: #344253;
+//   padding: 10px;
+//   margin: 20px 0;
+//   border: 2px solid blue;
+//   color: blue;
+// }
+
+
+
+// .blue-table {
+//   margin: 20px 0;
+//   border-collapse: collapse;
+  
+// }
+
+// .blue-row {
+  
+//   background-color: #344253;
+//   color: white;
+// text-align: left;
+ 
+  
+
+  
+// }
+
+// .blue-row1 {
+  
+ 
+//   font-weight: bold;
+
+  
+// }
+// .red{
+//  font-weight: bold;
+
+// }
+// .blue-table th, .blue-table td {
+//   border: 1px solid #ddd;
+//   padding: 8px;
+//   text-align: center;
+// }
+
+
+// .blue-button {
+//   text-align: center;
+//   margin: 20px 0;
+// }
+
+// .blue-button button {
+//   background-color: #344253;
+//   color: white;
+//   padding: 15px 30px;
+//   font-size: 16px;
+//   border: none;
+//   border-radius: 5px;
+//   cursor: pointer;
+// }
+
+
+
+
+// .footer {
+//   border-top: 2px solid blue;
+//   display: flex;
+//   justify-content: space-between;
+//   padding: 20px 0;
+// }
+
+// .footer-section {
+//   text-align: center;
+// }
+
+// .footer-section img {
+//   width: 100px; 
+// }
+
+
+// .name{
+//   font-weight: bold;
+//   font-family:Calibri;
+//   font-size:12pt;
+//   text-align: left;
+// }
+// .address{
+
+//   font-size: 12pt;
+//   font-family:calibri;
+//   font-weight: bold;
+//   text-align: right;
+//   text-align: left;
+// }
+// .ref{
+// font-size: 12pt;
+// font-family: calibri;
+// font-weight: bold;
+// text-align: left;
+// }
+// p.bold1{
+//   font-family: calibri;
+//   font-size: 11pt;
+//   text-align: left;
+
+// }
+// .bold2{
+//   font-family: calibri;
+//   font-size: 11pt;
+//   text-align: left;
+// }
+// .client{
+//   font-weight: bold;
+  
+  
+// }
+// .mobile{
+//   font-family: calibri;
+//   font-size:11pt;
+
+//}
+// .type{
+//   font-weight: bold;
+// }
+// .month{
+// font-weight: bold;
+// }
+// .date1{
+// font-weight: bold;
+// }
+
+
+
+
+
+
+
+
+
+
